vnc parser added

--- a/vnc.conf
+++ b/vnc.conf
@@ -1,8 +1,8 @@
 input {   
     file {
-        path => ["/home/zillur/logs/*.json"]
+        path => ["/home/zillur/vnc/*.json"]
         start_position => "beginning"
-        sincedb_path => "/home/zillur/sincedb"
+        sincedb_path => "/home/zillur/vnc/sincedb"
     }
 }
 
@@ -15,13 +15,13 @@ filter {
 			"message", ": False\b", ": false"
         ]
     }
-    json { source => "message" remove_field => [ "message", "@timestamp", "path", "host", "@version", "@metadata" ] }
+    json { source => "message" remove_field => [ "message", "path", "host", "@version", "@metadata" ] }
 }
 
 output {
   elasticsearch {
-    hosts => ["http://192.168.0.126:9200"]
-    index => "niryehoshua"
+    hosts => ["http://172.27.182.229:9200"]
+    index => "kawamivnc"
   }
   stdout { codec => rubydebug { metadata => true } }
 }
