--- a/kawami.conf
+++ b/kawami.conf
@@ -21,8 +21,8 @@ filter {
 output {
   elasticsearch {
     hosts => ["http://localhost:9200"]
-    index => "kawami"
-    user => "elastic"
-    password => "3bom9dESZhKucwoE0Iin"
+    index => "indexname"
+    user => "elasticsearchuser"
+    password => "elasticsearchpass"
   }
   stdout { codec => rubydebug { metadata => true } }
